--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,156 +12,181 @@ h1 {
 }
 
 /* line 12, ../scss/main.scss */
-#items {
+form {
   position: relative;
   top: 75px;
   margin: 0 auto 75px auto;
+}
+
+/* line 20, ../scss/main.scss */
+form button {
+  visibility: hidden;
+  width: 0px;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+/* line 27, ../scss/main.scss */
+form input {
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  width: calc(100% - 20px);
+  max-width: 500px;
+  text-align: center;
+  font-family: courier;
+  font-size: 20px;
+}
+
+/* line 40, ../scss/main.scss */
+#items {
   padding: 0;
   list-style: none;
 }
-/* line 21, ../scss/main.scss */
+/* line 46, ../scss/main.scss */
 #items li a {
   display: block;
   padding: 10px;
   text-decoration: none;
   color: #666;
-  transition: all .2s ease-in-out;
+  transition: all .1s ease-in-out;
 }
-/* line 28, ../scss/main.scss */
+/* line 53, ../scss/main.scss */
 #items li a:hover {
   color: #ddd;
 }
-/* line 32, ../scss/main.scss */
+/* line 57, ../scss/main.scss */
 #items li a:active {
   text-decoration: line-through;
   color: #ccc;
 }
-/* line 39, ../scss/main.scss */
+/* line 64, ../scss/main.scss */
 #items li:first-child {
   font-size: 40px;
 }
-/* line 42, ../scss/main.scss */
+/* line 67, ../scss/main.scss */
 #items li:nth-child(2) {
   font-size: 39px;
 }
-/* line 45, ../scss/main.scss */
+/* line 70, ../scss/main.scss */
 #items li:nth-child(3) {
   font-size: 38px;
 }
-/* line 48, ../scss/main.scss */
+/* line 73, ../scss/main.scss */
 #items li:nth-child(4) {
   font-size: 37px;
 }
-/* line 51, ../scss/main.scss */
+/* line 76, ../scss/main.scss */
 #items li:nth-child(5) {
   font-size: 36px;
 }
-/* line 54, ../scss/main.scss */
+/* line 79, ../scss/main.scss */
 #items li:nth-child(6) {
   font-size: 35px;
 }
-/* line 57, ../scss/main.scss */
+/* line 82, ../scss/main.scss */
 #items li:nth-child(7) {
   font-size: 34px;
 }
-/* line 60, ../scss/main.scss */
+/* line 85, ../scss/main.scss */
 #items li:nth-child(8) {
   font-size: 33px;
 }
-/* line 63, ../scss/main.scss */
+/* line 88, ../scss/main.scss */
 #items li:nth-child(9) {
   font-size: 32px;
 }
-/* line 66, ../scss/main.scss */
+/* line 91, ../scss/main.scss */
 #items li:nth-child(10) {
   font-size: 31px;
 }
-/* line 69, ../scss/main.scss */
+/* line 94, ../scss/main.scss */
 #items li:nth-child(11) {
   font-size: 30px;
 }
-/* line 72, ../scss/main.scss */
+/* line 97, ../scss/main.scss */
 #items li:nth-child(12) {
   font-size: 29px;
 }
-/* line 75, ../scss/main.scss */
+/* line 100, ../scss/main.scss */
 #items li:nth-child(13) {
   font-size: 28px;
 }
-/* line 78, ../scss/main.scss */
+/* line 103, ../scss/main.scss */
 #items li:nth-child(14) {
   font-size: 27px;
 }
-/* line 81, ../scss/main.scss */
+/* line 106, ../scss/main.scss */
 #items li:nth-child(15) {
   font-size: 26px;
 }
-/* line 84, ../scss/main.scss */
+/* line 109, ../scss/main.scss */
 #items li:nth-child(16) {
   font-size: 25px;
 }
-/* line 87, ../scss/main.scss */
+/* line 112, ../scss/main.scss */
 #items li:nth-child(17) {
   font-size: 24px;
 }
-/* line 90, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 #items li:nth-child(18) {
   font-size: 23px;
 }
-/* line 93, ../scss/main.scss */
+/* line 118, ../scss/main.scss */
 #items li:nth-child(19) {
   font-size: 22px;
 }
-/* line 96, ../scss/main.scss */
+/* line 121, ../scss/main.scss */
 #items li:nth-child(20) {
   font-size: 21px;
 }
-/* line 99, ../scss/main.scss */
+/* line 124, ../scss/main.scss */
 #items li:nth-child(21) {
   font-size: 20px;
 }
-/* line 102, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 #items li:nth-child(22) {
   font-size: 19px;
 }
-/* line 105, ../scss/main.scss */
+/* line 130, ../scss/main.scss */
 #items li:nth-child(23) {
   font-size: 18px;
 }
-/* line 108, ../scss/main.scss */
+/* line 133, ../scss/main.scss */
 #items li:nth-child(24) {
   font-size: 17px;
 }
-/* line 111, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 #items li:nth-child(25) {
   font-size: 16px;
 }
-/* line 114, ../scss/main.scss */
+/* line 139, ../scss/main.scss */
 #items li:nth-child(26) {
   font-size: 15px;
 }
-/* line 117, ../scss/main.scss */
+/* line 142, ../scss/main.scss */
 #items li:nth-child(27) {
   font-size: 14px;
 }
-/* line 120, ../scss/main.scss */
+/* line 145, ../scss/main.scss */
 #items li:nth-child(28) {
   font-size: 13px;
 }
-/* line 123, ../scss/main.scss */
+/* line 148, ../scss/main.scss */
 #items li:nth-child(29) {
   font-size: 12px;
 }
-/* line 126, ../scss/main.scss */
+/* line 151, ../scss/main.scss */
 #items li:nth-child(30) {
   font-size: 11px;
 }
 
-/* line 134, ../scss/main.scss */
+/* line 159, ../scss/main.scss */
 footer {
+  padding-top: 75px;
   font-size: 10px;
 }
-/* line 136, ../scss/main.scss */
+/* line 162, ../scss/main.scss */
 footer a {
   color: #6868da;
 }
