--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,49 +1,37 @@
-body{
- text-align: center;
- font-family: courier;
-}
-
-h1{
- font-size: 25px;
- position: fixed;
- width: 100%;
-}
-
 form{
-
  position: relative;
- top: 75px;
+ top: 100px;
  margin: 0 auto 75px auto;
-
 }
 
 form button{
+  display: block;
   visibility: hidden;
   width: 0px;
-  padding: 0 !important;
-  margin: 0 !important;
+  padding: 0;
+  margin: 0;
 }
 
 form input{
   padding: 10px;
   border: none;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 3px solid #ccc;
   width: calc(100% - 20px);
   max-width: 500px;
 
-   text-align: center;
-   font-family: courier;
-   font-size: 20px;
-
+  text-align: center;
+  font-family: $base-font;
+  font-size: 20px;
 }
 
 #items{
-
+ margin: 25px auto;
  padding: 0;
-
  list-style: none;
 
  li a{
+  font-family: $base-font;
+  font-weight: 700;
   display: block;
   padding: 10px;
   text-decoration: none;
@@ -57,6 +45,7 @@ form input{
   &:active{
    text-decoration: line-through;
    color: #ccc;
+   cursor: wait;
   }
 
  }
@@ -153,13 +142,4 @@ form input{
  }
 
 
-}
-
-// Footer
-footer{
-  padding-top: 75px;
-  font-size: 10px;
- a{
-  color: #6868da;
- }
 }
