--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -25,61 +25,64 @@ a {
   text-decoration: none;
 }
 
-/* line 4, ../scss/_display.scss */
+/* line 15, ../scss/_display.scss */
 body {
   text-align: center;
 }
 
-/* line 8, ../scss/_display.scss */
+/* line 19, ../scss/_display.scss */
 h1 {
   font-family: "filson-soft", sans-serif;
   font-size: 50px;
-  position: fixed;
   width: 100%;
   font-weight: 700;
   top: 25px;
 }
 
-/* line 17, ../scss/_display.scss */
+/* line 27, ../scss/_display.scss */
 p {
   font-family: "filson-soft", sans-serif;
 }
 
-/* line 22, ../scss/_display.scss */
+/* line 32, ../scss/_display.scss */
 footer {
   font-weight: 700;
   padding-top: 75px;
   font-size: 10px;
 }
-/* line 26, ../scss/_display.scss */
+/* line 36, ../scss/_display.scss */
 footer a {
   color: #6868da;
 }
-/* line 28, ../scss/_display.scss */
+/* line 38, ../scss/_display.scss */
 footer a:hover {
   text-decoration: underline;
 }
 
-/* line 35, ../scss/_display.scss */
+/* line 45, ../scss/_display.scss */
 ::selection {
   background: #6868da;
   color: #fff;
 }
 
-/* line 39, ../scss/_display.scss */
+/* line 49, ../scss/_display.scss */
 ::-moz-selection {
   background: #6868da;
   color: #fff;
 }
 
 /* line 1, ../scss/_main.scss */
-form {
-  position: relative;
-  top: 100px;
-  margin: 0 auto 75px auto;
+#app {
+  padding: 10px;
 }
 
-/* line 7, ../scss/_main.scss */
+/* line 5, ../scss/_main.scss */
+form {
+  position: relative;
+  margin: 25px auto;
+}
+
+/* line 10, ../scss/_main.scss */
 form button {
   display: block;
   visibility: hidden;
@@ -88,161 +91,295 @@ form button {
   margin: 0;
 }
 
-/* line 15, ../scss/_main.scss */
+/* line 18, ../scss/_main.scss */
 form input {
   padding: 10px;
   border: none;
-  border-bottom: 3px solid #ccc;
-  width: calc(100% - 20px);
+  border: 3px solid #ccc;
+  border-radius: 8px;
+  width: calc(100% - 26px);
   max-width: 500px;
   text-align: center;
   font-family: "filson-soft", sans-serif;
   font-size: 20px;
+  transition: all .1s ease-in-out;
+}
+/* line 32, ../scss/_main.scss */
+form input:focus {
+  transform: scale(1.2);
+}
+@media screen and (max-width: 500px) {
+  /* line 37, ../scss/_main.scss */
+  form input:focus {
+    transform: scale(1);
+  }
 }
 
-/* line 27, ../scss/_main.scss */
+/* line 45, ../scss/_main.scss */
 #items {
   margin: 25px auto;
   padding: 0;
   list-style: none;
 }
-/* line 32, ../scss/_main.scss */
+/* line 50, ../scss/_main.scss */
+#items.purple li a {
+  background: #6868da;
+  color: #fff;
+}
+/* line 55, ../scss/_main.scss */
+#items li {
+  margin-bottom: 5px;
+}
+/* line 59, ../scss/_main.scss */
 #items li a {
   font-family: "filson-soft", sans-serif;
   font-weight: 700;
-  display: block;
+  display: inline-block;
+  word-wrap: break-word;
+  word-break: break-all;
   padding: 10px;
   text-decoration: none;
-  color: #666;
+  color: #fff;
   transition: all .1s ease-in-out;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+  border-radius: 8px;
+  width: auto;
 }
-/* line 41, ../scss/_main.scss */
+/* line 77, ../scss/_main.scss */
 #items li a:hover {
-  color: #ddd;
+  transform: scale(0.95);
 }
-/* line 45, ../scss/_main.scss */
+/* line 81, ../scss/_main.scss */
 #items li a:active {
+  transform: scale(1.1);
   text-decoration: line-through;
-  color: #ccc;
   cursor: wait;
 }
-/* line 53, ../scss/_main.scss */
+/* line 89, ../scss/_main.scss */
+#items li.ui-sortable-helper a {
+  cursor: move;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+/* line 95, ../scss/_main.scss */
 #items li:first-child {
   font-size: 40px;
 }
-/* line 56, ../scss/_main.scss */
+/* line 98, ../scss/_main.scss */
 #items li:nth-child(2) {
   font-size: 39px;
 }
-/* line 59, ../scss/_main.scss */
+/* line 101, ../scss/_main.scss */
 #items li:nth-child(3) {
   font-size: 38px;
 }
-/* line 62, ../scss/_main.scss */
+/* line 104, ../scss/_main.scss */
 #items li:nth-child(4) {
   font-size: 37px;
 }
-/* line 65, ../scss/_main.scss */
+/* line 107, ../scss/_main.scss */
 #items li:nth-child(5) {
   font-size: 36px;
 }
-/* line 68, ../scss/_main.scss */
+/* line 110, ../scss/_main.scss */
 #items li:nth-child(6) {
   font-size: 35px;
 }
-/* line 71, ../scss/_main.scss */
+/* line 113, ../scss/_main.scss */
 #items li:nth-child(7) {
   font-size: 34px;
 }
-/* line 74, ../scss/_main.scss */
+/* line 116, ../scss/_main.scss */
 #items li:nth-child(8) {
   font-size: 33px;
 }
-/* line 77, ../scss/_main.scss */
+/* line 119, ../scss/_main.scss */
 #items li:nth-child(9) {
   font-size: 32px;
 }
-/* line 80, ../scss/_main.scss */
+/* line 122, ../scss/_main.scss */
 #items li:nth-child(10) {
   font-size: 31px;
 }
-/* line 83, ../scss/_main.scss */
+/* line 125, ../scss/_main.scss */
 #items li:nth-child(11) {
   font-size: 30px;
 }
-/* line 86, ../scss/_main.scss */
+/* line 128, ../scss/_main.scss */
 #items li:nth-child(12) {
   font-size: 29px;
 }
-/* line 89, ../scss/_main.scss */
+/* line 131, ../scss/_main.scss */
 #items li:nth-child(13) {
   font-size: 28px;
 }
-/* line 92, ../scss/_main.scss */
+/* line 134, ../scss/_main.scss */
 #items li:nth-child(14) {
   font-size: 27px;
 }
-/* line 95, ../scss/_main.scss */
+/* line 137, ../scss/_main.scss */
 #items li:nth-child(15) {
   font-size: 26px;
 }
-/* line 98, ../scss/_main.scss */
+/* line 140, ../scss/_main.scss */
 #items li:nth-child(16) {
   font-size: 25px;
 }
-/* line 101, ../scss/_main.scss */
+/* line 143, ../scss/_main.scss */
 #items li:nth-child(17) {
   font-size: 24px;
 }
-/* line 104, ../scss/_main.scss */
+/* line 146, ../scss/_main.scss */
 #items li:nth-child(18) {
   font-size: 23px;
 }
-/* line 107, ../scss/_main.scss */
+/* line 149, ../scss/_main.scss */
 #items li:nth-child(19) {
   font-size: 22px;
 }
-/* line 110, ../scss/_main.scss */
+/* line 152, ../scss/_main.scss */
 #items li:nth-child(20) {
   font-size: 21px;
 }
-/* line 113, ../scss/_main.scss */
+/* line 155, ../scss/_main.scss */
 #items li:nth-child(21) {
   font-size: 20px;
 }
-/* line 116, ../scss/_main.scss */
+/* line 158, ../scss/_main.scss */
 #items li:nth-child(22) {
   font-size: 19px;
 }
-/* line 119, ../scss/_main.scss */
+/* line 161, ../scss/_main.scss */
 #items li:nth-child(23) {
   font-size: 18px;
 }
-/* line 122, ../scss/_main.scss */
+/* line 164, ../scss/_main.scss */
 #items li:nth-child(24) {
   font-size: 17px;
 }
-/* line 125, ../scss/_main.scss */
+/* line 167, ../scss/_main.scss */
 #items li:nth-child(25) {
   font-size: 16px;
 }
-/* line 128, ../scss/_main.scss */
+/* line 170, ../scss/_main.scss */
 #items li:nth-child(26) {
   font-size: 15px;
 }
-/* line 131, ../scss/_main.scss */
+/* line 173, ../scss/_main.scss */
 #items li:nth-child(27) {
   font-size: 14px;
 }
-/* line 134, ../scss/_main.scss */
+/* line 176, ../scss/_main.scss */
 #items li:nth-child(28) {
   font-size: 13px;
 }
-/* line 137, ../scss/_main.scss */
+/* line 179, ../scss/_main.scss */
 #items li:nth-child(29) {
   font-size: 12px;
 }
-/* line 140, ../scss/_main.scss */
+/* line 182, ../scss/_main.scss */
 #items li:nth-child(30) {
   font-size: 11px;
+}
+/* line 185, ../scss/_main.scss */
+#items li:nth-child(31) {
+  font-size: 10px;
+}
+/* line 188, ../scss/_main.scss */
+#items li:nth-child(32) {
+  font-size: 9px;
+}
+/* line 191, ../scss/_main.scss */
+#items li:nth-child(33) {
+  font-size: 8px;
+}
+/* line 194, ../scss/_main.scss */
+#items li:nth-child(34) {
+  font-size: 7px;
+}
+/* line 197, ../scss/_main.scss */
+#items li:nth-child(35) {
+  font-size: 6px;
+}
+/* line 200, ../scss/_main.scss */
+#items li:nth-child(36) {
+  font-size: 5px;
+}
+/* line 203, ../scss/_main.scss */
+#items li:nth-child(37) {
+  font-size: 4px;
+}
+/* line 206, ../scss/_main.scss */
+#items li:nth-child(38) {
+  font-size: 3px;
+}
+/* line 209, ../scss/_main.scss */
+#items li:nth-child(39) {
+  font-size: 2px;
+}
+/* line 212, ../scss/_main.scss */
+#items li:nth-child(40) {
+  font-size: 1px;
+}
+
+/* line 1, ../scss/_color-nav.scss */
+nav.colors {
+  margin: 25px auto;
+}
+/* line 5, ../scss/_color-nav.scss */
+nav.colors ul li a {
+  line-height: 20px;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  font-size: 50px;
+}
+/* line 12, ../scss/_color-nav.scss */
+nav.colors ul li a.active, nav.colors ul li a:hover {
+  transform: scale(1.5);
+}
+/* line 16, ../scss/_color-nav.scss */
+nav.colors ul li a.black {
+  color: #000;
+}
+/* line 20, ../scss/_color-nav.scss */
+nav.colors ul li a.red {
+  color: #F14E5C;
+}
+/* line 24, ../scss/_color-nav.scss */
+nav.colors ul li a.purple {
+  color: #6868da;
+}
+
+/* line 6, ../scss/_colors.scss */
+#app.black form input {
+  border-color: #000;
+  outline: #000;
+  color: #000;
+}
+/* line 12, ../scss/_colors.scss */
+#app.black #items li a {
+  background: #000;
+}
+/* line 17, ../scss/_colors.scss */
+#app.purple form input {
+  border-color: #6868da;
+  outline: #6868da;
+  color: #6868da;
+}
+/* line 23, ../scss/_colors.scss */
+#app.purple #items li a {
+  background: #6868da;
+}
+/* line 28, ../scss/_colors.scss */
+#app.red form input {
+  border-color: #F14E5C;
+  outline: #F14E5C;
+  color: #F14E5C;
+}
+/* line 34, ../scss/_colors.scss */
+#app.red #items li a {
+  background: #F14E5C;
 }
