--- a/assets/scss/_display.scss
+++ b/assets/scss/_display.scss
@@ -1,17 +1,27 @@
 // Typography
 $base-font:  "filson-soft",sans-serif;
 
+$white: #fff;
+$black: #000;
+$purple: #6868da;
+$red: #F14E5C;
+$yellow: #e8d354;
+
+// Breakpoints
+$break-big: 1200px;
+$break-med: 800px;
+$break-small: 500px;
+
 body{
  text-align: center;
 }
 
 h1{
   font-family: $base-font;
- font-size: 50px;
- position: fixed;
- width: 100%;
- font-weight: 700;
- top: 25px;
+  font-size: 50px;
+  width: 100%;
+  font-weight: 700;
+  top: 25px;
 }
 
 p{
@@ -24,7 +34,7 @@ footer{
   padding-top: 75px;
   font-size: 10px;
  a{
-  color: #6868da;
+  color: $purple;
   &:hover{
     text-decoration: underline;
   }
@@ -33,10 +43,10 @@ footer{
 
 // Hide selection
 ::selection {
-  background: #6868da;
-  color: #fff;
+  background: $purple;
+  color: $white;
 }
 ::-moz-selection {
-  background: #6868da;
-  color: #fff;
+  background: $purple;
+  color: $white;
 }
