--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -105,125 +105,68 @@ form input{
    cursor: -webkit-grab;
  }
 
+ li.ui-state-highlight{
+  height: 50px;
+  opacity: .2;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 8px;
+ }
+
  li:first-child{
   font-size: 40px;
  }
  li:nth-child(2){
-  font-size: 39px;
- }
- li:nth-child(3){
   font-size: 38px;
  }
- li:nth-child(4){
-  font-size: 37px;
- }
- li:nth-child(5){
+ li:nth-child(3){
   font-size: 36px;
  }
- li:nth-child(6){
-  font-size: 35px;
- }
- li:nth-child(7){
+ li:nth-child(4){
   font-size: 34px;
  }
- li:nth-child(8){
-  font-size: 33px;
- }
- li:nth-child(9){
+ li:nth-child(5){
   font-size: 32px;
  }
- li:nth-child(10){
-  font-size: 31px;
- }
- li:nth-child(11){
+ li:nth-child(6){
   font-size: 30px;
  }
- li:nth-child(12){
-  font-size: 29px;
- }
- li:nth-child(13){
+ li:nth-child(7){
   font-size: 28px;
  }
- li:nth-child(14){
-  font-size: 27px;
- }
- li:nth-child(15){
+ li:nth-child(8){
   font-size: 26px;
  }
- li:nth-child(16){
-  font-size: 25px;
- }
- li:nth-child(17){
+ li:nth-child(9){
   font-size: 24px;
  }
- li:nth-child(18){
-  font-size: 23px;
- }
- li:nth-child(19){
+ li:nth-child(10){
   font-size: 22px;
  }
- li:nth-child(20){
-  font-size: 21px;
- }
- li:nth-child(21){
+ li:nth-child(11){
   font-size: 20px;
  }
- li:nth-child(22){
-  font-size: 19px;
- }
- li:nth-child(23){
+ li:nth-child(12){
   font-size: 18px;
  }
- li:nth-child(24){
-  font-size: 17px;
- }
- li:nth-child(25){
+ li:nth-child(13){
   font-size: 16px;
  }
- li:nth-child(26){
-  font-size: 15px;
- }
- li:nth-child(27){
+ li:nth-child(14){
   font-size: 14px;
  }
- li:nth-child(28){
-  font-size: 13px;
- }
- li:nth-child(29){
+ li:nth-child(15){
   font-size: 12px;
  }
- li:nth-child(30){
-  font-size: 11px;
- }
-  li:nth-child(31){
+ li:nth-child(16){
   font-size: 10px;
  }
- li:nth-child(32){
-  font-size: 9px;
- }
- li:nth-child(33){
+ li:nth-child(16){
   font-size: 8px;
  }
- li:nth-child(34){
-  font-size: 7px;
- }
- li:nth-child(35){
-  font-size: 6px;
- }
- li:nth-child(36){
-  font-size: 5px;
- }
- li:nth-child(37){
-  font-size: 4px;
- }
- li:nth-child(38){
-  font-size: 3px;
- }
- li:nth-child(39){
-  font-size: 2px;
- }
- li:nth-child(40){
-  font-size: 1px;
+ li{
+  font-size: 8px;
  }
 
 
