--- a/assets/scss/_color-nav.scss
+++ b/assets/scss/_color-nav.scss
@@ -1,6 +1,8 @@
 nav.colors{
-
-  margin: 25px auto;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  margin: 0 auto;
 
   ul li a{
     line-height: 20px;
