--- a/assets/scss/_display.scss
+++ b/assets/scss/_display.scss
@@ -3,9 +3,15 @@ $base-font:  "filson-soft",sans-serif;
 
 $white: #fff;
 $black: #000;
+$light-gray: #efefef;
+$gray: #ddd;
+$dark-gray: #333;
+
 $purple: #6868da;
 $red: #F14E5C;
 $yellow: #e8d354;
+
+
 
 // Breakpoints
 $break-big: 1200px;
@@ -31,24 +37,25 @@ p{
   font-family: $base-font;
 }
 
-// Footer
-footer{
+// Clear button
+ a.clear{
   font-family: $base-font;
-  font-weight: 700;
-  padding-top: 75px;
+  display: inline-block;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  padding: 10px;
+  color: $dark-gray;
+  background-color: $gray;
+  border-radius: 5px;
+  transition: all .1s ease-in-out;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   font-size: 10px;
-  p a{
-  font-size: 10px;
-  &:hover{
-    text-decoration: underline;
+  &:active{
+    transform: scale(.9);
   }
  }
-
- .reset{
-  font-size: 24px;
- }
-
-}
 
 // Hide selection
 ::selection {
