--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -343,28 +343,24 @@ a.clear:active {
   background: rgba(92, 184, 17, 0.9);
 }
 
-/* line 1, ../scss/_main.scss */
-#app {
-  padding: 10px;
-}
-@media screen and (max-width: 500px) {
-  /* line 7, ../scss/_main.scss */
-  #app h1 {
-    position: fixed;
-    left: 10px;
-    top: 10px;
-    font-size: 16px;
-    text-align: left;
-  }
+/* line 3, ../scss/_main.scss */
+#app h1 {
+  position: fixed;
+  padding: 5px;
+  top: 0;
+  font-size: 16px;
+  text-align: left;
+  z-index: 1000;
+  background: #fff;
 }
 
-/* line 27, ../scss/_main.scss */
+/* line 23, ../scss/_main.scss */
 form {
   position: relative;
-  margin: 25px auto;
+  margin: 35px auto 0 auto;
 }
 
-/* line 32, ../scss/_main.scss */
+/* line 28, ../scss/_main.scss */
 form button {
   display: block;
   visibility: hidden;
@@ -373,39 +369,39 @@ form button {
   margin: 0;
 }
 
-/* line 40, ../scss/_main.scss */
+/* line 36, ../scss/_main.scss */
 form input {
   padding: 10px;
   border: none;
-  border: 3px solid #ccc;
-  border-radius: 8px;
-  width: calc(100% - 26px);
-  max-width: 500px;
+  border-bottom: 3px solid #000;
+  width: calc(100% - 20px);
+  max-width: 510px;
+  margin: 0;
   text-align: center;
   font-family: "filson-soft", sans-serif;
   font-size: 20px;
   transition: all .1s ease-in-out;
 }
 
-/* line 56, ../scss/_main.scss */
+/* line 52, ../scss/_main.scss */
 #items {
-  margin: 25px auto;
+  margin: 0 auto;
   padding: 0;
   list-style: none;
   display: flex;
   flex-flow: column nowrap;
   max-width: 530px;
 }
-/* line 64, ../scss/_main.scss */
+/* line 60, ../scss/_main.scss */
 #items.purple li a {
   background: #6868da;
   color: #fff;
 }
-/* line 69, ../scss/_main.scss */
+/* line 65, ../scss/_main.scss */
 #items li {
-  margin-bottom: 5px;
+  margin-bottom: 1px;
 }
-/* line 72, ../scss/_main.scss */
+/* line 67, ../scss/_main.scss */
 #items li span.handle {
   display: inline-block;
   border-right: 1px solid #fff;
@@ -415,21 +411,21 @@ form input {
   margin-left: -10px;
   margin-right: 10px;
 }
-/* line 82, ../scss/_main.scss */
+/* line 77, ../scss/_main.scss */
 #items li.done {
   order: 100;
 }
-/* line 86, ../scss/_main.scss */
+/* line 81, ../scss/_main.scss */
 #items li.done span {
   display: none;
 }
-/* line 90, ../scss/_main.scss */
+/* line 85, ../scss/_main.scss */
 #items li.done a {
-  color: #ccc;
-  background: transparent !Important;
+  color: #a9a9a9;
+  background: #efefef !important;
   text-decoration: line-through;
 }
-/* line 98, ../scss/_main.scss */
+/* line 93, ../scss/_main.scss */
 #items li a {
   font-family: "filson-soft", sans-serif;
   font-weight: 700;
@@ -443,29 +439,27 @@ form input {
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   hyphens: auto;
-  border-radius: 8px;
   width: auto;
 }
-/* line 121, ../scss/_main.scss */
+/* line 115, ../scss/_main.scss */
 #items li a:active {
   transform: scale(1.025);
 }
-/* line 129, ../scss/_main.scss */
+/* line 123, ../scss/_main.scss */
 #items li.ui-sortable-helper a {
   cursor: move;
   cursor: -moz-grab;
   cursor: -webkit-grab;
 }
-/* line 135, ../scss/_main.scss */
+/* line 129, ../scss/_main.scss */
 #items li.ui-state-highlight {
   height: 50px;
   opacity: .2;
   max-width: 530px;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 8px;
 }
-/* line 144, ../scss/_main.scss */
+/* line 137, ../scss/_main.scss */
 #items li {
   font-size: 20px;
 }
@@ -473,11 +467,12 @@ form input {
 /* line 1, ../scss/_color-nav.scss */
 nav.colors {
   position: fixed;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   margin: 0 auto;
+  z-index: 2000;
 }
-/* line 7, ../scss/_color-nav.scss */
+/* line 8, ../scss/_color-nav.scss */
 nav.colors ul li a {
   line-height: 20px;
   display: inline-block;
@@ -485,71 +480,107 @@ nav.colors ul li a {
   height: 30px;
   font-size: 50px;
 }
-/* line 14, ../scss/_color-nav.scss */
+/* line 15, ../scss/_color-nav.scss */
 nav.colors ul li a.active, nav.colors ul li a:hover {
   transform: scale(1.5);
 }
-/* line 18, ../scss/_color-nav.scss */
+/* line 19, ../scss/_color-nav.scss */
 nav.colors ul li a.black {
   color: #000;
 }
-/* line 22, ../scss/_color-nav.scss */
+/* line 23, ../scss/_color-nav.scss */
 nav.colors ul li a.red {
   color: #F14E5C;
 }
-/* line 26, ../scss/_color-nav.scss */
+/* line 27, ../scss/_color-nav.scss */
 nav.colors ul li a.purple {
   color: #6868da;
 }
 
-/* line 5, ../scss/_colors.scss */
+/* line 3, ../scss/_colors.scss */
 #app h1, #app input, #app a {
   transition: all .1s ease-in-out;
 }
-/* line 9, ../scss/_colors.scss */
+/* line 7, ../scss/_colors.scss */
 #app h1 a {
   text-decoration: none;
 }
-/* line 15, ../scss/_colors.scss */
+/* line 13, ../scss/_colors.scss */
 #app.black form input {
   border-color: #000;
   outline: #000;
   color: #000;
 }
-/* line 21, ../scss/_colors.scss */
+/* line 19, ../scss/_colors.scss */
 #app.black #items li a {
   background: #000;
 }
-/* line 25, ../scss/_colors.scss */
+/* line 23, ../scss/_colors.scss */
+#app.black #items li:first-child a, #app.black #items li:nth-child(2) a {
+  background: #bc3ada;
+}
+/* line 27, ../scss/_colors.scss */
+#app.black #items li:nth-child(3) a, #app.black #items li:nth-child(4) a {
+  background: #e447ab;
+}
+/* line 31, ../scss/_colors.scss */
+#app.black #items li:nth-child(5) a, #app.black #items li:nth-child(6) a {
+  background: #f75092;
+}
+/* line 35, ../scss/_colors.scss */
+#app.black #items li:nth-child(7) a, #app.black #items li:nth-child(8) a {
+  background: #ff606d;
+}
+/* line 39, ../scss/_colors.scss */
+#app.black #items li:nth-child(9) a, #app.black #items li:nth-child(10) a {
+  background: #fe7244;
+}
+/* line 43, ../scss/_colors.scss */
+#app.black #items li:nth-child(10) a, #app.black #items li:nth-child(11) a {
+  background: #f58907;
+}
+/* line 47, ../scss/_colors.scss */
+#app.black #items li:nth-child(12) a, #app.black #items li:nth-child(13) a {
+  background: #f2a900;
+}
+/* line 51, ../scss/_colors.scss */
+#app.black #items li:nth-child(14) a, #app.black #items li:nth-child(15) a {
+  background: #edc800;
+}
+/* line 55, ../scss/_colors.scss */
+#app.black #items li:nth-child(16) a, #app.black #items li:nth-child(17) a {
+  background: #b4c700;
+}
+/* line 59, ../scss/_colors.scss */
 #app.black li.ui-state-highlight {
   opacity: .1;
   background: #000;
 }
-/* line 32, ../scss/_colors.scss */
+/* line 66, ../scss/_colors.scss */
 #app.purple form input {
   border-color: #6868da;
   outline: #6868da;
   color: #6868da;
 }
-/* line 38, ../scss/_colors.scss */
+/* line 72, ../scss/_colors.scss */
 #app.purple #items li a {
   background: #6868da;
 }
-/* line 42, ../scss/_colors.scss */
+/* line 76, ../scss/_colors.scss */
 #app.purple li.ui-state-highlight {
   background: #6868da;
 }
-/* line 48, ../scss/_colors.scss */
+/* line 82, ../scss/_colors.scss */
 #app.red form input {
   border-color: #F14E5C;
   outline: #F14E5C;
   color: #F14E5C;
 }
-/* line 54, ../scss/_colors.scss */
+/* line 88, ../scss/_colors.scss */
 #app.red #items li a {
   background: #F14E5C;
 }
-/* line 58, ../scss/_colors.scss */
+/* line 92, ../scss/_colors.scss */
 #app.red li.ui-state-highlight {
   background: #F14E5C;
 }
