--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,5 +1,3 @@
-
-
 #app{
 
   h1, input, a{
@@ -20,6 +18,42 @@
 
   &.black #items li a{
     background: $black;
+  }
+
+  &.black #items li:first-child a, &.black #items li:nth-child(2) a{
+    background: #bc3ada;
+  }
+
+  &.black #items li:nth-child(3) a, &.black #items li:nth-child(4) a{
+    background: #e447ab;
+  }
+
+  &.black #items li:nth-child(5) a, &.black #items li:nth-child(6) a{
+    background: #f75092;
+  }
+
+  &.black #items li:nth-child(7) a, &.black #items li:nth-child(8) a{
+    background: #ff606d;
+  }
+
+  &.black #items li:nth-child(9) a, &.black #items li:nth-child(10) a{
+    background: #fe7244;
+  }
+
+  &.black #items li:nth-child(10) a, &.black #items li:nth-child(11) a{
+    background: #f58907;
+  }
+
+  &.black #items li:nth-child(12) a, &.black #items li:nth-child(13) a{
+    background: #f2a900;
+  }
+
+  &.black #items li:nth-child(14) a, &.black #items li:nth-child(15) a{
+    background: #edc800;
+  }
+
+  &.black #items li:nth-child(16) a, &.black #items li:nth-child(17) a{
+    background: #b4c700;
   }
 
   &.black li.ui-state-highlight{
