--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,15 +1,13 @@
 #app{
 
-  padding: 10px;
-
-  @media screen and (max-width: $break-small) {
-
     h1{
       position: fixed;
-      left: 10px;
-      top: 10px;
+      padding: 5px;
+      top: 0;
       font-size: 16px;
       text-align: left;
+      z-index: 1000;
+      background: $white;
     }
 
     #items{
@@ -20,15 +18,13 @@
       // }
     }
 
-  }
-
 }
 
 form{
  position: relative;
- margin: 25px auto;
-}
+ margin: 35px auto 0 auto;
 
+}
 form button{
   display: block;
   visibility: hidden;
@@ -40,10 +36,10 @@ form button{
 form input{
   padding: 10px;
   border: none;
-  border: 3px solid #ccc;
-  border-radius: 8px;
-  width: calc(100% - 26px);
-  max-width: 500px;
+  border-bottom: 3px solid $black;
+  width: calc(100% - 20px);
+  max-width: 510px;
+  margin: 0;
 
   text-align: center;
   font-family: $base-font;
@@ -54,7 +50,7 @@ form input{
 }
 
 #items{
- margin: 25px auto;
+ margin: 0 auto;
  padding: 0;
  list-style: none;
  display: flex;
@@ -67,8 +63,7 @@ form input{
 }
 
  li{
-  margin-bottom: 5px;
-
+  margin-bottom: 1px;
   span.handle{
     display: inline-block;
     border-right: 1px solid #fff;
@@ -88,8 +83,8 @@ form input{
     }
   }
   &.done a{
-    color: #ccc;
-    background: transparent !Important;
+    color: #a9a9a9;
+    background: #efefef !important;
     text-decoration: line-through;
   }
 
@@ -111,7 +106,6 @@ form input{
    -moz-hyphens: auto;
         hyphens: auto;
 
-  border-radius: 8px;
   width: auto;
 
   &:hover{
@@ -138,7 +132,6 @@ form input{
   max-width: 530px;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 8px;
  }
 
  li{
